--- a/.travis.yml
+++ b/.travis.yml
@@ -21,3 +21,4 @@ install:
 
 script:
 - npm run test -- --no-watch --no-progress --browsers=ChromeHeadlessCI
+- npm run e2e -- --protractor-config=e2e/protractor-ci.conf.js
