--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@angular/router": "~7.2.0",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "lodash": "^4.17.11",
     "ngx-take-until-destroy": "^5.4.0",
     "rxjs": "~6.3.3",
+    "subtitles-parser": "0.0.2",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
