--- a/angular.json
+++ b/angular.json
@@ -3,17 +3,21 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "appS": {
+    "a": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
       "prefix": "app",
-      "schematics": {},
+      "schematics": {
+        "@schematics/angular:component": {
+          "style": "sass"
+        }
+      },
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/appS",
+            "outputPath": "dist/a",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -23,8 +27,7 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.css"
+              "src/styles.sass"
             ],
             "scripts": [],
             "es5BrowserSupport": true
@@ -59,18 +62,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "appS:build"
+            "browserTarget": "a:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "appS:build:production"
+              "browserTarget": "a:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "appS:build"
+            "browserTarget": "a:build"
           }
         },
         "test": {
@@ -81,8 +84,7 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.css"
+              "src/styles.sass"
             ],
             "scripts": [],
             "assets": [
@@ -105,7 +107,7 @@
         }
       }
     },
-    "appS-e2e": {
+    "a-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "prefix": "",
@@ -114,11 +116,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "appS:serve"
+            "devServerTarget": "a:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "appS:serve:production"
+              "devServerTarget": "a:serve:production"
             }
           }
         },
@@ -134,5 +136,5 @@
       }
     }
   },
-  "defaultProject": "appS"
+  "defaultProject": "a"
 }
